# lumao

./: Cargo.toml
log_init/: Cargo.toml
log_init/src/: lib.rs
src/: lumao_app.rs  main.rs
statistics/: Cargo.toml
statistics/src/: lumao_app.rs  mail.rs  main.rs  message.rs  pay_page.rs  pay_tab.rs  receive_page.rs
statistics/src/pay/: browser.rs  discord.rs  ip.rs  mail.rs  mod.rs  telegram.rs  unit.rs  x.rs
