[workspace]
package = { edition = "2021", version = "0.1.0" }
resolver = "2"
members = [
    "statistics",
    "log_init"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
eframe = {version = "0" ,features = ["default"]}
egui_extras ={version = "0.28",features = ["all_loaders"]}
image = {version = "0"}
chrono = {version = "0.4"}
tokio = {version = "1.38", features = ["rt-multi-thread", "time"] }
flume = {version = "0.11"}
log = "0.4"
log4rs = { version = "1.3", default-features = false, features = ["all_components"] }